examples/k8s-client/ingress.yaml
# Requires an Ingress controller (Traefik) and cert-manager
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: towk-client
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: towk-client
  namespace: towk-client
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: towk-client-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - towk.cc
      secretName: towk-client-tls
  rules:
    - host: towk.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: towk-client
                port:
                  number: 80
